Add minor changes to flex file